# biomedic

./: .gitignore  CMakeLists.txt  README.md
doc/tps/: TP3 - ADC.doc
src/: apps.h  main.c
src/apps/: ex_blink.c  ex_button.c  ex_serial.c  ex_timers.c  tp_01.c  tp_02.c  tp_03.c
src/core/: common.c  common.h
src/driver/: adc.c  adc.h  button.c  button.h  led.c  led.h  serial.c  serial.h  timer.c  timer.h
